--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button onclick="exportarMatriz()">Exportar</button>
       <button onclick="document.getElementById('importFile').click()">Importar</button>
       <input type="file" id="importFile" style="display: none" accept=".txt" onchange="importarMatriz(event)" />
+      <button id="clear-grid-btn">Clear Grid</button>
     </div>
     
     <div class="editor">
