--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button onclick="document.getElementById('importFile').click()">Importar</button>
       <input type="file" id="importFile" style="display: none" accept=".txt" onchange="importarMatriz(event)" />
       <button id="clear-grid-btn">Clear Grid</button>
-      <button id="generate-new-btn" onclick="generarMatriz(false)">OK</button>
+      <button id="generate-new-btn" onclick="createSecondLayer()">OK</button>
     </div>
     
     <div class="editor">
