--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
             </div>
             
           </div>
+          <div class="tile-group">
+            <h3>Enemigos</h3>
+            <div class="tiles">
+              <img src="assets/enemigos/tile000.png" draggable="true" ondragstart="drag(event)" data-id="enemigo1" />
+              <img src="assets/enemigos/tile001.png" draggable="true" ondragstart="drag(event)" data-id="enemigo2" />
+              <img src="assets/enemigos/tile002.png" draggable="true" ondragstart="drag(event)" data-id="enemigo3" />
+            </div>
+          </div>
         </div>
       </div>
       <div id="grid" class="grid"></div>
