--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
           <div class="tile-group">
             <h3>Objetos</h3>
             <div class="tiles">
-              <img src="images/items/tile0.png" draggable="true" ondragstart="drag(event)" data-id="objeto1" />
-              <img src="images/items/tile1.png" draggable="true" ondragstart="drag(event)" data-id="objeto12" />
-              <img src="images/items/tile2.png" draggable="true" ondragstart="drag(event)" data-id="objeto13" />
-              <img src="images/items/tile3.png" draggable="true" ondragstart="drag(event)" data-id="objeto14" />
-              <img src="images/items/tile4.png" draggable="true" ondragstart="drag(event)" data-id="objeto15" />
+              <img src="images/items/tile0.png" draggable="true" ondragstart="drag(event)" data-id="item0" />
+              <img src="images/items/tile1.png" draggable="true" ondragstart="drag(event)" data-id="item1" />
+              <img src="images/items/tile2.png" draggable="true" ondragstart="drag(event)" data-id="item2" />
+              <img src="images/items/tile3.png" draggable="true" ondragstart="drag(event)" data-id="item3" />
+              <img src="images/items/tile4.png" draggable="true" ondragstart="drag(event)" data-id="item4" />
             </div>
           </div>
           <div class="tile-group">
@@ -183,6 +183,18 @@
               <img src="images/enemigos/tile3.png" draggable="true" ondragstart="drag(event)" data-id="enemigo4" />
             </div>
           </div>
+
+          <div class="tile-group">
+            <h3>Items</h3>
+            <div class="tiles">
+              <img src="images/enemigos/tile0.png" draggable="true" ondragstart="drag(event)" data-id="objeto0" />
+              <img src="images/enemigos/tile1.png" draggable="true" ondragstart="drag(event)" data-id="objeto1" />
+              <img src="images/enemigos/tile2.png" draggable="true" ondragstart="drag(event)" data-id="objeto2" />
+              <img src="images/enemigos/tile3.png" draggable="true" ondragstart="drag(event)" data-id="objeto3" />
+            </div>
+          </div>
+
+
         </div>
       </div>
       <div id="grid" class="grid"></div>
