--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
               <img src="images/enemigos/tile1.png" draggable="true" ondragstart="drag(event)" data-id="objeto1" />
               <img src="images/enemigos/tile2.png" draggable="true" ondragstart="drag(event)" data-id="objeto2" />
               <img src="images/enemigos/tile3.png" draggable="true" ondragstart="drag(event)" data-id="objeto3" />
+              <img src="images/enemigos/tile4.png" draggable="true" ondragstart="drag(event)" data-id="objeto4" />
+              <img src="images/enemigos/tile5.png" draggable="true" ondragstart="drag(event)" data-id="objeto5" />
+              <img src="images/enemigos/tile6.png" draggable="true" ondragstart="drag(event)" data-id="objeto6" />
             </div>
           </div>
 
