mejorado errores de elementos colisionables mal posicionado en el html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           <div class="tile-group">
             <h3>Terrenos</h3>
             <div class="tiles">
+              <img src="images/enemigos/tile118.png" draggable="true" ondragstart="drag(event)" data-id="terreno118" />
+              <img src="images/enemigos/tile119.png" draggable="true" ondragstart="drag(event)" data-id="terreno119" />
               <img src="images/terrenos/tile0.png" draggable="true" ondragstart="drag(event)" data-id="terreno1" />
               <img src="images/terrenos/tile1.png" draggable="true" ondragstart="drag(event)" data-id="terreno2" />
               <img src="images/terrenos/tile2.png" draggable="true" ondragstart="drag(event)" data-id="terreno3" />
@@ -188,12 +190,10 @@
             <h3>Items</h3>
             <div class="tiles">
               <img src="images/enemigos/tile0.png" draggable="true" ondragstart="drag(event)" data-id="objeto0" />
-              <img src="images/enemigos/tile1.png" draggable="true" ondragstart="drag(event)" data-id="objeto1" />
-              <img src="images/enemigos/tile2.png" draggable="true" ondragstart="drag(event)" data-id="objeto2" />
-              <img src="images/enemigos/tile3.png" draggable="true" ondragstart="drag(event)" data-id="objeto3" />
-              <img src="images/enemigos/tile4.png" draggable="true" ondragstart="drag(event)" data-id="objeto4" />
-              <img src="images/enemigos/tile5.png" draggable="true" ondragstart="drag(event)" data-id="objeto5" />
-              <img src="images/enemigos/tile6.png" draggable="true" ondragstart="drag(event)" data-id="objeto6" />
+              <img src="images/enemigos/tile3.png" draggable="true" ondragstart="drag(event)" data-id="objeto1" />
+              <img src="images/enemigos/tile4.png" draggable="true" ondragstart="drag(event)" data-id="objeto2" />
+              <img src="images/enemigos/tile5.png" draggable="true" ondragstart="drag(event)" data-id="objeto3" />
+              <img src="images/enemigos/tile6.png" draggable="true" ondragstart="drag(event)" data-id="objeto4" />
             </div>
           </div>
 
