agregado iteraccion con items

--- a/index.html
+++ b/index.html
@@ -43,18 +43,17 @@
           <div class="tile-group">
             <h3>Objetos</h3>
             <div class="tiles">
-              <img src="images/items/tile0.png" draggable="true" ondragstart="drag(event)" data-id="item0" />
+             
               <img src="images/items/tile1.png" draggable="true" ondragstart="drag(event)" data-id="item1" />
               <img src="images/items/tile2.png" draggable="true" ondragstart="drag(event)" data-id="item2" />
               <img src="images/items/tile3.png" draggable="true" ondragstart="drag(event)" data-id="item3" />
-              <img src="images/items/tile4.png" draggable="true" ondragstart="drag(event)" data-id="item4" />
             </div>
           </div>
           <div class="tile-group">
             <h3>Terrenos</h3>
             <div class="tiles">
-              <img src="images/enemigos/tile118.png" draggable="true" ondragstart="drag(event)" data-id="terreno118" />
-              <img src="images/enemigos/tile119.png" draggable="true" ondragstart="drag(event)" data-id="terreno119" />
+              <img src="images/terrenos/tile118.png" draggable="true" ondragstart="drag(event)" data-id="terreno118" />
+              <img src="images/terrenos/tile119.png" draggable="true" ondragstart="drag(event)" data-id="terreno119" />
               <img src="images/terrenos/tile0.png" draggable="true" ondragstart="drag(event)" data-id="terreno1" />
               <img src="images/terrenos/tile1.png" draggable="true" ondragstart="drag(event)" data-id="terreno2" />
               <img src="images/terrenos/tile2.png" draggable="true" ondragstart="drag(event)" data-id="terreno3" />
