--- a/web/index.html
+++ b/web/index.html
@@ -295,6 +295,8 @@
               <img src="../python/images/enemigos/tile4.png" draggable="true" ondragstart="drag(event)" data-id="objeto2" />
               <img src="../python/images/enemigos/tile5.png" draggable="true" ondragstart="drag(event)" data-id="objeto3" />
               <img src="../python/images/enemigos/tile6.png" draggable="true" ondragstart="drag(event)" data-id="objeto4" />
+              <img src="../python/images/enemigos/tile7.png" draggable="true" ondragstart="drag(event)" data-id="objeto5" />
+
             </div>
           </div>
 
