--- a/web/index.html
+++ b/web/index.html
@@ -282,6 +282,7 @@
               <img src="../python/images/terrenos/tile117.png" draggable="true" ondragstart="drag(event)" data-id="terreno117" />
               <img src="../python/images/terrenos/tile118.png" draggable="true" ondragstart="drag(event)" data-id="terreno118" />
               <img src="../python/images/terrenos/tile119.png" draggable="true" ondragstart="drag(event)" data-id="terreno119" />
+              <img src="../python/images/terrenos/tile120.png" draggable="true" ondragstart="drag(event)" data-id="terreno120" />
               
             </div>
             
